<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:nestedScrollingEnabled="false"
                tools:context="com.kdao.cmpe235_project.UploadActivity">

    <LinearLayout
        android:id="@+id/pauseCancelAllLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonPauseAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorOrange"
            android:text="@string/pause_all" />

        <Button
            android:id="@+id/buttonCancelAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorRed"
            android:text="@string/cancel_all" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/operationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/pauseCancelAllLayout"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause" />

        <Button
            android:id="@+id/buttonResume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resume" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/uploadDownloadLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/operationLayout"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonUploadVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:text="@string/upload_video" />

        <Button
            android:id="@+id/buttonUploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBlueLight"
            android:text="@string/upload_image" />
        <Button
            android:id="@+id/buttonUploadAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorOrange"
            android:text="@string/upload_audio" />
    </LinearLayout>

    <Spinner
        android:id="@+id/tree_list_selection"
        android:background="@drawable/border_default"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:textColor="@color/colorTextMainColor"
        android:layout_above="@id/uploadDownloadLayout"
        android:layout_height="60dp" />
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tree_list_selection"
        android:cacheColorHint="@color/colorBlack"
        android:divider="@color/colorGrey"
        android:dividerHeight="1dp"
        android:transcriptMode="normal" />

</RelativeLayout>