<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="com.kdao.cmpe235_project.CameraActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20px"
        android:id="@+id/button_table"
        android:stretchColumns="*">
        <TableRow>
            <Button
                android:id="@+id/camera_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_btn"/>
            <Button
                android:id="@+id/video_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_btn"/>
            <Button
                android:id="@+id/audio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio_btn"/>
        </TableRow>
    </TableLayout>
    <ImageView
           android:id="@+id/viewImage"
            android:src="@drawable/main_image1"
            android:layout_width="200pt"
            android:layout_height="200pt"
            android:scaleType="fitXY"
            android:layout_below="@id/button_table"
            android:layout_marginTop="20px"
            android:layout_centerHorizontal="true" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20px"
        android:layout_below="@id/viewImage"
        android:stretchColumns="*">
        <TableRow>
            <Button
                android:id="@+id/image_share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_sharing"/>
            <Button
                android:id="@+id/upload_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_upload"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
